fix: changed vertical section overflow animations styles

--- a/src/components/VerticalSectionOverflow/styles.css
+++ b/src/components/VerticalSectionOverflow/styles.css
@@ -1,5 +1,9 @@
 .rainbow-vertical-section-overflow_container {
-  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
+  transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -webkit-transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -moz-transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -ms-transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -o-transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
   .rainbow-vertical-section-overflow_container .rainbow-nav-vertical__action {
     padding: 0.75rem 0.5rem 0.75rem 2.875rem; }
 
@@ -26,7 +30,12 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+  transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -moz-transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -ms-transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -o-transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1); }
   .rainbow-vertical-section-overflow_button:focus {
     outline: 0;
     background-color: #f4f6f9; }
@@ -35,25 +44,29 @@
   padding: 1rem 1rem 0 2rem; }
 
 .rainbow-vertical-section-overflow--show {
-  transition: all 0.2s ease-out;
-  -webkit-transition: all 0.2s ease-out;
-  -moz-transition: all 0.2s ease-out;
-  -ms-transition: all 0.2s ease-out;
-  -o-transition: all 0.2s ease-out; }
-  .rainbow-vertical-section-overflow--show .rainbow-vertical-item_action {
-    padding: 0.5rem 0.5rem 0.5rem 3.5rem; }
-  .rainbow-vertical-section-overflow--show .rainbow-vertical-item_icon {
-    top: 0.75rem;
-    left: 2rem; }
+  opacity: 1;
+  transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -moz-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -ms-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -o-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1); }
 
 .rainbow-vertical-section-overflow--hide {
   max-height: 0;
   overflow: hidden;
-  transition: 0.4s;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -ms-transition: 0.4s;
-  -o-transition: 0.4s; }
+  opacity: 0;
+  transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -moz-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -ms-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  -o-transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1), max-height 0.15s cubic-bezier(0.4, 0, 0.2, 1); }
+
+.rainbow-vertical-item_action {
+  padding: 0.5rem 0.5rem 0.5rem 3.5rem; }
+
+.rainbow-vertical-item_icon {
+  top: 0.75rem;
+  left: 2rem; }
 
 .rainbow-vertical-section-overflow_action-text {
   display: flex;
@@ -70,7 +83,11 @@
   font-size: 0.625rem;
   line-height: 1rem;
   color: #a4a7b5;
-  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
+  transition: all 0.15s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -webkit-transition: all 0.15s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -moz-transition: all 0.15s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -ms-transition: all 0.15s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  -o-transition: all 0.15s cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
 
 .rainbow-vertical-section-overflow_action-description--expanded {
   opacity: 0; }
@@ -79,8 +96,16 @@
   margin-left: 0.5rem;
   margin-top: 0.625rem;
   transform: rotate(0deg);
-  transition: transform 0.15s linear; }
+  transition: transform 0.15s linear;
+  -webkit-transition: transform 0.15s linear;
+  -moz-transition: transform 0.15s linear;
+  -ms-transition: transform 0.15s linear;
+  -o-transition: transform 0.15s linear; }
 
 .rainbow-vertical-section-overflow-icon--expanded {
   transform: rotate(-180deg);
-  transition: transform 0.15s linear; }
+  transition: transform 0.15s linear;
+  -webkit-transition: transform 0.15s linear;
+  -moz-transition: transform 0.15s linear;
+  -ms-transition: transform 0.15s linear;
+  -o-transition: transform 0.15s linear; }
